<resources>
    <string name="app_name">Viaja Meu Povo</string>
    <string name="btnMinhasViagens">Minhas Viagens</string>
    <string name="btnCalculadora">Calcule a moeda</string>
    <string name="btnDicasVideo">Dicas de Viagem</string>
    <string name="btnSobre">Sobre o APP</string>
    <string name="tvTitleViagem">Minhas Viagens</string>
    <string name="addViagem">Adicionar Viagem</string>
    <string name="editViagem">Editar Viagem</string>
    <string name="local">Local</string>
    <string name="erroLocal">Local inválido</string>
    <string name="data">Data</string>
    <string name="erroData">Data inválida</string>
    <string name="checkin">Check-in</string>
    <string name="sim">Sim</string>
    <string name="yes">Sim</string>
    <string name="nao">Não</string>
    <string name="no">Não</string>
    <string name="save">Salvar</string>
    <string name="cancel">Cancelar</string>
    <string name="delete">Deletar</string>
    <string name="tvTitleCalculadora">Quanto custa R$ 1?</string>
    <string name="título_lista_videos">Assista as melhores dicas</string>
    <string name="lorem_ipsum_text">this a long established fact that a reader will be distracted!\n
    by the readable content of a page when looking at its layout.
    </string>
    <string name="textoSobre">App desenvolvido pelos estudantes Renata Leonel e\n Fábio Silva para a disciplina Programação de APP\n Universidade Católica de Brasília, 2021-6
 </string>
    <string name="componentesUtilizadoSobre">
     - Activity\n
     - HTTP Request\n
     - SQLite e SQLiteOpenHelper\n
     - ListView\n
     - RecyclerView\n
     - TextView\n
     - ImageView\n
     - EditText\n
     - VideoView\n
     - LinearLayout\n
     - CustomLayout\n
     - ConstraintLayout\n
     - Componentes Material Design\n
     - Intent (implicita e explícita)\n
     - Volley\n
     - Media e Media Controler\n
     - Local Notification\n
     - Internacionalização de strings utilizadas\n
     </string>
    <string name="btnChamarNotification">Chamar notificação</string>
    <string name="txtNotification">Esse texto aparece após o clique na notificação</string>
</resources>