<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    tools:context=".CadastrarViagem">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/addViagem"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:layout_marginTop="15dp"
        app:layout_constraintBottom_toTopOf="@+id/layInput"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/layBtn"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/yellow"
            android:hint="@string/local"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etLocal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/yellow" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/yellow"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="109dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/yellow"
                    android:paddingStart="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/data" />

                <TextView
                    android:id="@+id/etData"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:layout_weight="1"
                    android:background="@color/yellow"
                    android:hint="@string/data"
                    android:paddingStart="10dp" />


            </LinearLayout>


            <!--            <com.google.android.material.textfield.TextInputLayout-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:paddingStart="10dp"-->
            <!--                android:paddingTop="10dp"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:hint="@string/data"-->
            <!--                android:background="@color/yellow"-->
            <!--                android:layout_weight="1">-->
            <!--                <com.google.android.material.textfield.TextInputEditText-->
            <!--                    android:id="@+id/etData"-->
            <!--                    android:inputType="date"-->
            <!--                    android:layout_width="match_parent"-->
            <!--                    android:layout_height="wrap_content"/>-->
            <!--            </com.google.android.material.textfield.TextInputLayout>-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="29dp"
                    android:background="@color/yellow"
                    android:paddingStart="59dp"
                    android:text="@string/checkin" />

                <Spinner
                    android:id="@+id/spnCheckin"
                    android:layout_width="146dp"
                    android:layout_height="26dp"
                    android:layout_gravity="center"
                    android:background="@color/yellow"
                    android:baselineAligned="false" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button_green"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:text="@string/save" />

        <Button
            android:id="@+id/btnDel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:layout_marginLeft="10dp"
            android:background="@drawable/custom_button_red"
            android:text="@string/delete" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button_gray"
            android:textAlignment="center"
            android:layout_marginLeft="10dp"
            android:text="@string/cancel" />



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>